IA's/ia1/Grammar
stmt  : assn ';'
assn  : id '=' expr
expr  : term addop expr
      | term
term  : fact mulop term
      | fact
fact  : id 
      | num
      | '(' expr ')'
addop : '+'
      | '-'
mulop : '*'
      | '/'
comm  : '_/'
      | '_/.
deci  : digit*'.'digit*
neg   : '-'deci
